fix: fix gap util

--- a/src/assets/css/utils.css
+++ b/src/assets/css/utils.css
@@ -15,7 +15,7 @@
 /* GRID UTILS */
 .grid-gap-sm {
   display: grid;
-  gap: var(--spacing-sm);
+  gap: var(--spacing-2xs);
 }
 
 
